samples/_failures_safe/1761318749_57c0be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94c7a2d8.c: In function ‘main’:
./samples/SAFE/__tmp_94c7a2d8.c:135:5: error: expected declaration or statement at end of input
  135 |     print_matrix(&a, "A");
      |     ^~~~~~~~~~~~
